--- a/package.json
+++ b/package.json
@@ -4,8 +4,7 @@
   "private": true,
   "scripts": {
     "serve": "vue-cli-service serve",
-    "build": "vue-cli-service build",
-    "deploy": "push-dir --dir=dist --branch=gh-pages --cleanup"
+    "build": "vue-cli-service build"
   },
   "dependencies": {
     "core-js": "^3.8.3",
@@ -23,7 +22,6 @@
     "less": "^4.2.0",
     "less-loader": "^11.1.3",
     "postcss": "^8.4.29",
-    "push-dir": "^0.4.1",
     "sass": "^1.66.1",
     "sass-loader": "^13.3.2",
     "tailwindcss": "^3.3.3",
