--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,27 +1,59 @@
-name: CI Github Pages
-on:
-  #监听push操作
+# name: CI Github Pages
+# on:
+#   #监听push操作
+#   push:
+#     branches:
+#       - main # 这里只配置了main分支，所以只有推送main分支才会触发以下任务
+# jobs:
+#   # 任务ID
+#   build-and-deploy:
+#     # 运行环境
+#     runs-on: ubuntu-latest
+#     # 步骤
+#     steps:
+#       # 官方action，将代码拉取到虚拟机
+#       - name: Checkout  ️ 
+#         uses: actions/checkout@v3
+
+#       - name: Install and Build   # 安装依赖、打包，如果提前已打包好无需这一步
+#         run: |
+#           npm install
+#           npm run build
+
+#       - name: Deploy   # 部署
+#         uses: JamesIves/github-pages-deploy-action@v4.3.3
+#         with:
+#           branch: gh-pages # 部署后提交到那个分支
+#           folder: dist # 这里填打包好的目录名称
+
+
+name: Build and Deploy
+on: # 监听 main 分支上的 push 事件
   push:
     branches:
-      - main # 这里只配置了main分支，所以只有推送main分支才会触发以下任务
+      - main
 jobs:
-  # 任务ID
   build-and-deploy:
-    # 运行环境
-    runs-on: ubuntu-latest
-    # 步骤
-    steps:
-      # 官方action，将代码拉取到虚拟机
-      - name: Checkout  ️ 
-        uses: actions/checkout@v3
-
-      - name: Install and Build   # 安装依赖、打包，如果提前已打包好无需这一步
-        run: |
-          npm install
-          npm run build
-
-      - name: Deploy   # 部署
-        uses: JamesIves/github-pages-deploy-action@v4.3.3
+    runs-on: ubuntu-latest # 构建环境使用 ubuntu
+    steps:         
+      - name: Checkout # 获取源码
+        uses: actions/checkout@v3 
         with:
-          branch: gh-pages # 部署后提交到那个分支
-          folder: dist # 这里填打包好的目录名称
+          persist-credentials: false
+
+      - name: Install pnpm # 安装pnpm
+        uses: pnpm/action-setup@v2
+        with:
+          version: 6.0.2
+
+      - name: Install and Build # 下载依赖 打包项目
+        run: |
+          pnpm install
+          pnpm run build
+
+      - name: Deploy # 将打包内容发布到 github page
+        uses: JamesIves/github-pages-deploy-action@v4 # 使用别人写好的 actions
+        with:  # 自定义环境变量
+          BRANCH: gh-pages # github page指定分支
+          FOLDER: dist # build后生成的目录
+          clean: true
