--- a/package.json
+++ b/package.json
@@ -7,7 +7,10 @@
     "build": "vue-cli-service build"
   },
   "dependencies": {
+    "axios": "^1.5.0",
     "core-js": "^3.8.3",
+    "echarts": "^5.4.3",
+    "element-china-area-data": "^6.0.2",
     "element-ui": "^2.15.14",
     "jigsaw-captcha-js": "^1.0.0",
     "pinia": "^2.1.6",
