--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "element-china-area-data": "^6.0.2",
     "element-ui": "^2.15.14",
     "jigsaw-captcha-js": "^1.0.0",
+    "js-web-screen-shot": "1.9.9-rc.3",
     "pinia": "^2.1.6",
     "vue": "^2.6.14",
     "vue-router": "^3.5.1"
