--- a/package.json
+++ b/package.json
@@ -9,12 +9,14 @@
   "dependencies": {
     "axios": "^1.5.0",
     "core-js": "^3.8.3",
+    "d3": "7.8.4",
     "echarts": "^5.4.3",
     "element-china-area-data": "^6.0.2",
     "element-ui": "^2.15.14",
     "jigsaw-captcha-js": "^1.0.0",
     "js-web-screen-shot": "1.9.9-rc.3",
     "pinia": "^2.1.6",
+    "three": "0.152.2",
     "vue": "^2.6.14",
     "vue-router": "^3.5.1"
   },
