--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "build": "vue-cli-service build"
   },
   "dependencies": {
+    "@pansy/seal": "^0.1.4",
     "axios": "^1.5.0",
     "core-js": "^3.8.3",
     "d3": "7.8.4",
